Serifu.Web/Assets/header.css
body > header {
  margin-top: var(--header-margin-top);
  display: flex;
  align-items: center;
  justify-content: space-between;

  h1 {
    margin: 0;
    font-size: 2.5em;

    img {
      display: block;
      border: none;
      height: 1em;
    }
  }

  nav {
    display: flex;
    font-size: var(--font-size-smallish);

    a {
      color: inherit;
      white-space: nowrap;

      + a {
        margin-left: 2em;
      }

      &:not(:hover) {
        text-decoration: none;
      }
    }

    /* Align baselines */
    &:lang(en) a:lang(ja) {
      position: relative;
      top: -0.1em;
    }
    &:lang(ja) a:lang(en) {
      position: relative;
      top: 0.1em;
    }
  }

  .subtitle {
    &:lang(en) {
      font-style: italic;
    }

    &::before {
      content: '\B7'; /* Middle dot */
      display: inline-block;
      margin: 0 1.4em;
    }
  }

  .menu-button {
    display: none;
    border: none;
    font-size: 2.25rem;
    cursor: pointer;
  }

  &:lang(en) {
    @media (max-width: 750px) {
      h1 { font-size: 2.25em; }
      .menu-button { display: flex; }
      nav { display: none; }
    }
  }

  /* JP header needs to break early as it's a bit longer */
  &:lang(ja) {
    @media (max-width: 820px) {
      h1 { font-size: 2.25em; }
      .menu-button { display: flex; }
      nav { display: none; }
    }
  }
}

#drawer {
  --duration: 0.5s;

  top: 0;
  right: -100%;
  bottom: 0;
  left: auto;
  width: 75vw;
  max-width: 375px;
  height: auto;
  border: none;
  padding: 1em 0;
  margin: 0;
  flex-direction: column;
  justify-content: space-between;
  transition:
    right var(--duration),
    overlay var(--duration) allow-discrete,
    display var(--duration) allow-discrete;

  &::backdrop {
    background: rgba(0, 0, 0, 0);
    transition: all var(--duration) allow-discrete;
  }

  &:popover-open {
    display: flex;
    right: 0;

    @starting-style {
      right: -100%;
    }

    &::backdrop {
      background: rgba(0, 0, 0, 0.5);

      @starting-style {
        background: rgba(0, 0, 0, 0);
      }
    }
  }

  nav a, .subtitle {
    display: block;
    padding: 1em 2em;
    color: inherit;
    text-decoration: none;
  }

  a:hover, a:focus {
    background: var(--menu-hover-background);
    outline: none;
  }

  .subtitle:lang(en) {
    font-style: italic;
  }
}

/* Prevent accidentally clicking links etc. when light-dismissing the popover */
body:has(#drawer:popover-open)::before {
  content: ' ';
  display: block;
  z-index: 1000;
  position: fixed;
  inset: 0;
}

